--- a/theme/style.css
+++ b/theme/style.css
@@ -62,7 +62,7 @@ p{
 a,
 a:link,
 a:visited{
-	color: #000;
+/*	color: #000;*/
 	text-decoration: none;
 }
 a:hover{
@@ -88,6 +88,13 @@ a:hover{
 .float-right{
 	float:right;
 }
+#loader{
+	position:absolute;
+	top:50%;
+	left: 50%;
+	margin-left: -15px;
+	margin-top: -20px;
+	}
 .preloader {
 	background:url('images/loading.gif') center center no-repeat;
 	background-size: 34px 43px;
@@ -96,13 +103,10 @@ a:hover{
 	display: block;
 }
 .preloader_png {
-	position: absolute;
     background:url('images/loader_icon.png') center center no-repeat;
-    background-size: 10px 10px;
-    height: 10px;
-	width: 10px;
-	top:5px;
-	left:5px;
+    background-size: 30px 30px;
+    height: 30px;
+	width: 30px;
 	/*background-image::url('images/loading.gif');*/
 	-moz-animation: spin .5s infinite linear;
 	-webkit-animation: spin .5s infinite linear
@@ -165,18 +169,17 @@ html[xmlns] .clearfix {
 HEADER
 ===================================*/
 #nav-wrapper{
-	padding-top: 1%;
+	/*padding-top: 1%;*/
 	position: absolute;
-	top: 0;
+	top: 1%;
 	width: 100%;
-	min-height: 15%;
-	/*height: 15%;*/
+	/*min-height: 15%;*/
+	height: 14%;
 	z-index: 500;
 	}
 
 #nav-container{
 	max-width: 1208px;
-	width: 100%;
 	position: absolute;
 	top: 50%;
 	font-size: 100%;
@@ -186,6 +189,8 @@ HEADER
 	-o-transform: translate(0%, -50%);
 	transform: translate(0%, -50%);
 	}
+	#nav-container.tall{ width: 100%; }
+	#nav-container.short{ width: 70%; }
 
 #logo{
 	max-width: 345px;
@@ -214,17 +219,48 @@ HEADER
 /* =================================
 MAIN DROPDOWN MENU
 ===================================*/
-nav{
+/*nav{
 	padding-top: 2em;
-	/*padding-top: 3%;*/
+		/* padding-top: 3%;
 	letter-spacing: 1px;
 	display: block;
 	float: left;
 	padding-left: 4%;
 	height: 100%;
-	/*width: 28.6%;*/
+		/* width: 28.6%;
 	width: 24em;
-	}
+	}*/
+
+	nav{
+		letter-spacing: 1px;
+		display: block;
+		padding-left: 4%;
+		height: 100%;
+		width: 29.5em;
+		position: absolute;
+		left:28.6%;
+		}
+	#page-title,
+	#menu-menu-1{
+		position: absolute;
+		top: 50%;
+		-webkit-transform: translate(0%, -50%);
+		-moz-transform: translate(0%, -50%);
+		-ms-transform: translate(0%, -50%);
+		-o-transform: translate(0%, -50%);
+		transform: translate(0%, -50%);
+		}
+	#menu-menu-1{
+		/*width: 35.4107%;*/
+		max-width: 288px;
+		}
+	#page-title{
+		right: 0;
+		}
+
+
+/*	#nav-container.tall nav{ padding-top: 2em; }
+	#nav-container.short nav{ padding-top: 1.2em; }*/
 
 nav ul ul {
 	display: none;
@@ -234,8 +270,8 @@ nav ul ul {
 		}
 
 nav ul {
-	font-family: "freight-sans-pro", helvetica, arial, sans-serif;
-	font-weight: 400;
+	font-family: "freight-sans-pro", sans-serif;
+	font-weight: 500;
 	text-transform: uppercase;
 	padding: 0; 
 	list-style: none;
@@ -268,8 +304,8 @@ nav ul {
 		
 		nav ul li a {
 			display: block;
-			color: #000;
 			text-decoration: none;
+			color:#202020;
 			}
 
 nav ul ul {
@@ -291,10 +327,10 @@ nav ul ul {
 		nav ul li:hover ul li a{
 			padding: 4px 0px;
 			color: #939598;
-			font-weight: 400;
+			font-weight: 500;
 			}	
 			nav ul li:hover ul li:hover a{
-				color: #000;
+				color: #202020;
 				}
 
 #menu-item-33 {
@@ -310,17 +346,64 @@ nav ul ul {
 	font-size: 1em;
 	float:left;
 	text-transform: uppercase;
-	margin-top: 2em;
+	/*margin-top: 2em;*/
 	padding-left: 3em;
 	color: #84afcc;
 	font-family: "freight-sans-pro", helvetica, arial, sans-serif;
-	font-weight: 500;
+	font-weight: 700;
 	background-image: url('./images/title-arrow.png');
 	background-repeat: no-repeat;
 	background-size:14px 14px;
-	background-position: 0 4px;
+	background-position: 0 center;
+	letter-spacing: 1px;
 	}
 
+/*	#nav-container.tall #page-title{ margin-top: 2em; }
+	#nav-container.short #page-title{ margin-top: 1.2em; }*/
+
+/* =================================
+MOBILE NAV
+===================================*/
+#mobile-nav{
+	display: none;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	font-family: "freight-sans-pro", sans-serif;
+	font-weight: 500;
+	}
+	#mobile-nav .slicknav_menu{
+		background: rgba(255, 255, 255, 0.9);
+		}
+	#mobile-nav .slicknav_btn{
+		-webkit-border-radius: 0px;
+		-moz-border-radius: 0px;
+		border-radius: 0px;
+		text-shadow: 0 0px 0px #fff;
+		background-color: #939598;
+		}
+	#mobile-nav	.slicknav_menu .slicknav_icon-bar,
+	#mobile-nav .slicknav_menu .slicknav_menutxt{
+		text-shadow: 0 0px 0px #939598;
+		-webkit-box-shadow: 0 0px 0 #939598;
+		-moz-box-shadow: 0 0px 0 #939598;
+		box-shadow: 0 0px 0 #939598;
+		}
+	#mobile-nav .slicknav_nav,
+	#mobile-nav  .slicknav_nav a{
+		color: #939598;
+		}
+		#mobile-nav  .slicknav_nav a:hover,
+		#mobile-nav  .slicknav_nav a:hover a{
+			color:#84afcc;
+			background:transparent;
+			}
+	#mobile-nav .slicknav_nav .slicknav_item:hover{
+		-webkit-border-radius: 0px;
+		-moz-border-radius: 0px;
+		border-radius: 0px;
+		background:transparent;
+		color:#84afcc;
+		}
 
 
 /* =================================
@@ -343,7 +426,7 @@ HOME ANIMATION
 		position: relative;
 		width: 2880px;
 		height: 1800px;
-		top: 45%;
+		top: 48%;
 		left: 50%;
 		margin-left: -1440px;
 		margin-top: -900px;
@@ -352,7 +435,11 @@ HOME ANIMATION
 		}
 		#stage-container svg{
 			shape-rendering:geometricPrecision;
+			-webkit-transform:rotate(360deg);
 			}
+			#Stage__4-circles_rev12{
+				}
+
 
 #home-wrapper{
 	position: absolute;
@@ -389,13 +476,9 @@ HOME ANIMATION
 				}
 #enter{
 	position: absolute;
-	left: 46.3%;
-	bottom: 25%;
-	-webkit-transform: translate(0%, -50%);
-	-moz-transform: translate(0%, -50%);
-	-ms-transform: translate(0%, -50%);
-	-o-transform: translate(0%, -50%);
-	transform: translate(0%, -50%);
+	width: 100%;
+	text-align: center;
+	bottom: 5%;
 	}
 	#enter span{
 		font-family: "freight-sans-pro",sans-serif;
@@ -516,7 +599,7 @@ PAGE SETUP
 #right-half:hover,
 #left-half:hover{
 	opacity: 1;
-	filter: alpha(opacity=1);
+	filter: alpha(opacity=100);
 	}
 
 #right-half{ right: 0; }
@@ -536,7 +619,14 @@ PAGE SETUP
 	left: 5%;
 	}
 
-
+#mobile-next{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: none;
+	}
 
 /* =================================
 THUMBNAILS
@@ -550,7 +640,8 @@ THUMBNAILS
 	}
 	#thumb-image-container.closed{
 		height: 5%;
-		padding-top: 0.5%;
+		/*padding-top: 0.5%;*/
+		padding-top: 1%;
 		}
 	#thumb-image-container.opened{
 		height: 19%;
@@ -581,7 +672,7 @@ THUMBNAILS
 	#thumb-wrapper.opened{
 		visibility: visible;
 		opacity: 1;
-		filter: alpha(opacity=1);
+		filter: alpha(opacity=100);
 		/*height: 68px;*/
 		}
 	#thumb-images{
@@ -595,11 +686,11 @@ THUMBNAILS
 			/*height: 68px;*/
 			margin-right: 8px;
 			opacity: 0.4;
-			filter: alpha(opacity=4);
+			filter: alpha(opacity=40);
 			}
 		#thumb-images li:hover{
 			opacity: 1;
-			filter: alpha(opacity=1);
+			filter: alpha(opacity=100);
 			}
 			#thumb-images li:hover span{
 				-webkit-box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);
@@ -633,7 +724,7 @@ THUMBNAILS
 					}	
 		#thumb-images li.selected{
 			opacity: 1;
-			filter: alpha(opacity=1);
+			filter: alpha(opacity=100);
 			}
 			#thumb-images li.selected span{
 				-webkit-box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);
@@ -772,7 +863,9 @@ TABLET SIZE FIXES
 }
 
 @media screen and (max-width: 1024px){
-#nav-container { font-size: 95%; }
+	#nav-container { font-size: 95%; }
+/*	#menu-menu-1{ width: 39%; }
+	#page-title{ left: 40%; }*/
 }
 
 /* ipad landscape */
@@ -785,4 +878,49 @@ TABLET SIZE FIXES
 @media screen and (max-width: 768px){
 	#nav-container { font-size: 70%; }
 	#page-title{ background-size: 8px 8px; background-position: 0 3px;}
+	#thumb-image-container{display: none;}
+	#right-half{ display: none; }
+	#left-half{ display: none; }
+	#mobile-next{display: block; z-index: 100;}
 }
+@media screen and (max-width: 767px){
+	#mobile-nav{
+		display: block;
+		opacity: 1;
+		filter: alpha(opacity=100);
+		position: absolute;
+		width: 50%;
+		left:50%;
+		top:0;
+		}
+	#page-title,
+	#nav-wrapper nav{
+		display: none;
+		opacity: 0;
+		filter: alpha(opacity=0);
+		}
+	#logo{
+		float: none;
+		position: absolute;
+		width: 50%;
+		border-width: 0;
+		top: 10px;
+		max-width: 160px;
+		}
+	#nav-container{
+		top:0;
+		-webkit-transform: translate(0%, 0%);
+		-moz-transform: translate(0%, 0%);
+		-ms-transform: translate(-50%, 0%);
+		-o-transform: translate(0%, 0%);
+		transform: translate(0%, 0%);
+		}
+}
+@media screen and (max-width: 400px){
+	#stage-container{
+		-ms-transform: scale(0.7,0.7); /* IE 9 */
+		-webkit-transform: scale(0.7,0.7); /* Chrome, Safari, Opera */
+		transform: scale(0.7,0.7);
+	}
+}
+
