--- a/theme/style.css
+++ b/theme/style.css
@@ -26,6 +26,7 @@ body{
 	font-family: arial, sans-serif;
 	width: 100%;
 	min-height: 100%;
+	overflow:hidden;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -197,6 +198,10 @@ HEADER
 	width: 28.6%;/* 245px */
 	float: left;
 	padding: 0 4%;
+	height:auto !important; /* real browsers */
+	height:82px; /* IE6: treaded as min-height*/
+	min-height:34px;
+	max-height: 82px;
 	/*height: 90px;*/
 	border-right-style: solid;
 	border-right-width: 1px;
@@ -212,7 +217,7 @@ HEADER
 	#logo svg{
 		max-width: 100%;
 		margin-top: 2.5%;
-		max-height: 100%;
+		max-height: 71px;
 		margin-bottom: 5%;
 		}
 
@@ -236,7 +241,7 @@ MAIN DROPDOWN MENU
 		display: block;
 		padding-left: 4%;
 		height: 100%;
-		width: 29.5em;
+		width: 30em;
 		position: absolute;
 		left:28.6%;
 		}
@@ -300,6 +305,7 @@ nav ul {
 				/*font-weight: 500;
 				letter-spacing: 1px;*/
 				text-decoration: none;
+				font-weight: 700;
 				}
 		
 		nav ul li a {
@@ -693,9 +699,9 @@ THUMBNAILS
 			filter: alpha(opacity=100);
 			}
 			#thumb-images li:hover span{
-				-webkit-box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);
-				-moz-box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);
-				box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);	
+				-webkit-box-shadow: inset 0px 0px 0px 1px rgba(246,141,48,1);
+				-moz-box-shadow: inset 0px 0px 0px 1px rgba(246,141,48,1);
+				box-shadow: inset 0px 0px 0px 1px rgba(246,141,48,1);	
 				}
 			#thumb-images li div{
 				display: block;
@@ -703,6 +709,7 @@ THUMBNAILS
 				left: 50%;
 				top: 50%;
 				z-index: 100;
+				width: 100%;
 				-webkit-transform: translate(-50%, -50%);
 				-moz-transform: translate(-50%, -50%);
 				-ms-transform: translate(-50%, -50%);
@@ -712,10 +719,16 @@ THUMBNAILS
 				}
 				#thumb-images li div img{
 					position: relative;
-					max-height: 100%;
-					width: auto;
 					z-index: 50;
 					}
+					#thumb-images li div img.vert{ /* if window is horizontal match height */
+						max-height:100%;
+						width:auto;
+						}
+					#thumb-images li div img.horz{ /* if window is vertical match width */
+						max-width: 100%;
+						height:auto;
+						}
 				#thumb-images li span{
 					position: absolute;
 					width: 100%;
@@ -727,9 +740,9 @@ THUMBNAILS
 			filter: alpha(opacity=100);
 			}
 			#thumb-images li.selected span{
-				-webkit-box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);
-				-moz-box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);
-				box-shadow: inset 0px 0px 0px 4px rgba(246,141,48,1);
+				-webkit-box-shadow: inset 0px 0px 0px 1px rgba(246,141,48,1);
+				-moz-box-shadow: inset 0px 0px 0px 1px rgba(246,141,48,1);
+				box-shadow: inset 0px 0px 0px 1px rgba(246,141,48,1);
 				}
 
 #thumb-btn-show{
